objects/Installed_Product_History__c.object
<CustomObject>
    <fields>
        <fullName>Detached_Date__c</fullName>
        <label>Detached Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewValue__c</fullName>
        <label>NewValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Top_Level_Installed_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Moved In Level Installed Product</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Installed Product History (Moved In Top Level Installed Product)</relationshipLabel>
        <relationshipName>Installed_Product_History2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OldValue__c</fullName>
        <label>OldValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Top_Level_Installed_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Moved Out Top Level Installed Product</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Installed Product History (Moved Out Top Level Installed Product)</relationshipLabel>
        <relationshipName>Installed_Product_History1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent ID</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Installed Product History</relationshipLabel>
        <relationshipName>Installed_Product_History</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Installed Product History</label>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installed Product History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>